# agentic_job_hunter

./: .gitignore  CLAUDE.md  README.md  UPGRADES.md  agentic-job-hunter-prd.md  email_bodt.txt  email_body.txt  main.py  orchestrator.py  pyproject.toml  requirements.txt  task.md  test_scorer.py
agents/: auth.py  gmail_reader.py  jd_scraper.py  liveness.py  match_scorer.py  resume_tailor.py  types.py
agents/emailParsers/: __inti__.py  base_parser.py  hirist.py  linkedin.py
agents/site_scrapers/: __init__.py  base_scraper.py  hirist.py  linkedin.py
config/: profile.md
resumes/: base_resume.md  template.tex
steps/: code_review_phase3.md  phase1_project_setup.md  phase2_gmail_reader.md  phase3_jd_scraper.md  phase3_site_scrapers_oo.md  phase4_match_scorer.md  phase5_resume_tailor.md  phase6_sheets_logger.md
utils/: core.py  logger.py  parsers.py
