[project]
name = "agentic-job-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.89.0",
    "bs4>=0.0.2",
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.1",
    "langgraph>=1.1.6",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
]
